// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyValue should be not edidable 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should have a helptext 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text">Type something</span>
</div>
`;

exports[`KeyValue should have a label 1`] = `
<div class="form-group">
  <label>label </label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should have a predefined Value 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" placeholder="Option 1" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should have a spritemap 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should have a value 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" disabled="disabled" value="value">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should have an id 1`] = `
<div class="form-group">
  <label for="ID"></label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should not be required 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should render Label if showLabel is true 1`] = `
<div class="form-group">
  <label>text </label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text">
  </div>
  <span class="form-text"></span>
</div>
`;

exports[`KeyValue should render component with a key 1`] = `
<div class="form-group">
  <label></label>
  <input class="form-control" type="text" disabled="disabled">
  <div class="form-text key-value-editor">
    <label class="control-label key-value-label">Field Name:</label>
    <input class="key-value-input" type="text" value="key">
  </div>
  <span class="form-text"></span>
</div>
`;
